Purely functional version Fixed LoadingScreen Displays all Roadmaps and all Sites Next step is too improve readability by styling all this

--- a/frontend/src/styles/RoadmapCard.css
+++ b/frontend/src/styles/RoadmapCard.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
-.site-card {
+.roadmap-card {
     width: fit-content;
+    cursor: pointer;
 }
